# miniqlib

./: .gitignore  README.md  config.yaml  config_dca.yaml  config_pipeline.yaml  config_private.yaml.example  main.py  pyproject.toml
.gemini/: config.json  rules.md
.gemini/agents/: translator.md
EXP_and_LOG/2026-05-23/: vscode_duckdb_and_ssl_issues.md
EXP_and_LOG/2026-05-24/: operator_engine_redesign.md  operator_init_reflection_debug.md
EXP_and_LOG/2026-05-25/: corn_3d_lambdarank_smoke_test.md
EXP_and_LOG/2026-05-26/: bilingual_comment_translation_safety_analysis.md
EXP_and_LOG/2026-05-27/: bugfix_backtest_rolling_blotter_main_2026-05-27.md  code_audit_report.md  logging_improvement_plan.md  qlib_style_features_labels_registry_and_pipeline.md  rolling_min_periods_and_eval_sandbox_optimization.md  strict_leakage_prevention_and_event_driven_backtest_plan.md  test_coverage_plan.md
agent/: README.md  audit_methodology.md  config.json  translator.md
mini_qlib/backtest/: __init__.py  backtest.py  blotter.py  data_portal.py  exchange.py  method.md  strategy.py
mini_qlib/data/: README.md  __init__.py  expression.py  handler.py  load_data.py  method.md  ops.py
mini_qlib/database/: README.md  sp500_tickers.csv
mini_qlib/factor/: README.md  __init__.py  (+4 more)
qlib/: .gitignore
sometest/: corn.py  test_backtest.py  test_backtest_integration.py  test_data_handler.py  test_operators_edge_cases.py  test_phase2_computations.py  test_pipeline.py  test_reflection.py  test_registry.py
test_yaml/: about_corn.yaml
video_scripts/: apple_dca_script.md  generate_charts.py
(+37 files in other folders)
