[project]
name = "miniqlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "qlib>=0.0.2.dev20",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
    "yfinance>=1.3.0",
]
